Avoid using deleted BookmarkTriangles or null BookmarkPopups

BUG: 283753
FIXED-IN: 2.5